<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="#FFFFFF">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
<!--                app:layout_constraintTop_toBottomOf="@+id/edtSearch">-->

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp">

                    <RelativeLayout
                        android:id="@+id/layout_dichvb"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#43C3D4">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/bus"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:gravity="center_vertical|center_horizontal"
                            android:paddingTop="15dp"
                            android:text="@string/tvDichBanBan"
                            android:textColor="@color/white"
                            android:textSize="24sp" />

                        <ImageView
                            android:id="@+id/bus"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"

                            app:srcCompat="@drawable/translate" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp">

                    <RelativeLayout
                        android:id="@+id/layout_tuluuy"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#73D17D">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imageView3"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:gravity="center_vertical|center_horizontal"
                            android:paddingTop="15dp"
                            android:text="@string/tvTuLuuY"
                            android:textColor="@color/white"
                            android:textSize="24sp" />

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            app:srcCompat="@drawable/star" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp">

                    <RelativeLayout
                        android:id="@+id/layout_lichsu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#F58DE5">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/bus1"
                            android:layout_centerHorizontal="true"

                            android:gravity="center_vertical|center_horizontal"
                            android:paddingTop="15dp"
                            android:text="@string/txLichSu"
                            android:textColor="@color/white"
                            android:textSize="24sp" />

                        <ImageView
                            android:id="@+id/bus1"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            app:srcCompat="@drawable/clock" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp">

                    <RelativeLayout
                        android:id="@+id/layout_bqt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#E45E86">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/train"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/tvBQT"
                            android:textColor="@color/white"
                            android:textSize="24sp" />

                        <ImageView
                            android:id="@+id/train"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            app:srcCompat="@drawable/table" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp">

                    <RelativeLayout
                        android:id="@+id/layout_video"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#8A81E9">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/cycle"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/tvVideo"
                            android:textColor="@color/white"
                            android:textSize="24sp" />

                        <ImageView
                            android:id="@+id/cycle"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            app:srcCompat="@drawable/youtube" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp">

                    <RelativeLayout
                        android:id="@+id/layout_quest"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#EDDC43">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/exam"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/tvQuest"
                            android:textColor="@color/white"
                            android:textSize="24sp" />

                        <ImageView
                            android:id="@+id/exam"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            app:srcCompat="@drawable/exam1" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

<!--                <LinearLayout-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_margin="10dp"-->
<!--                    android:layout_weight="1">-->
<!--                </LinearLayout>-->
            </LinearLayout>

<!--            <EditText-->
<!--                android:id="@+id/edtSearch"-->
<!--                android:layout_width="367dp"-->
<!--                android:layout_height="48dp"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:background="@drawable/edtsearch"-->
<!--                android:drawableEnd="@drawable/ic_baseline_search_24"-->
<!--                android:ems="10"-->
<!--                android:hint="Nhập từ cần tra"-->
<!--                android:inputType="textPersonName"-->
<!--                android:paddingLeft="10dp"-->
<!--                android:paddingEnd="10dp"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>